--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             margin: 0;
         }
         </style>
-        <title></title>
+        <title>Carte des évènements culturels en Guinée</title>
     </head>
     <body>
         <div id="map">
